--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-title: uBuild Design Blocks
-author: Forestry.io
-email: support@forestry.io
+title: Mapping Language
+author: Andrew Weymouth
+email: aweymo@uw.edu
 description: >-
-  ubuild-jekyll is a Jekyll theme desgined to work with Forestry's Blocks feature.
-  This theme provides a set of page-level components and a pre-configured Forestry Blocks UI
-  that will empower content editors to construct their own webpages.
-baseurl: "/ubuild-jekyll" # the subpath of your site, e.g. /blog
-url: "" # your site's origin, e.g. https://forestry.io
+  Representation of  Immigrant Communities in the Pacific Northwest, 1880-1930
+baseurl: "/cs_land" # the subpath of your site, e.g. /blog
+url: "https://aweymo.github.io/cs_land" # your site's origin, e.g. https://forestry.io
 
 # Build settings
 defaults:
